syntax="proto3";

message PB_DoubleList {
    repeated double data = 1;
}
