syntax = "proto3";

message PB_Message{
    string message =1;
}
